--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,304 @@
+/* normalize */
+html {
+line-height: 1.15; /* 1 */
+-webkit-text-size-adjust: 100%; /* 2 */
+}
+
+body {
+margin: 0;
+}
+
+main {
+display: block;
+}
+
+h1 {
+font-size: 2em;
+margin: 0.67em 0;
+}
+
+hr {
+box-sizing: content-box; /* 1 */
+height: 0; /* 1 */
+overflow: visible; /* 2 */
+}
+
+pre {
+font-family: monospace, monospace; /* 1 */
+font-size: 1em; /* 2 */
+}
+
+a {
+background-color: transparent;
+}
+
+abbr[title] {
+border-bottom: none; /* 1 */
+text-decoration: underline; /* 2 */
+text-decoration: underline dotted; /* 2 */
+}
+
+b,
+strong {
+font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+font-family: monospace, monospace; /* 1 */
+font-size: 1em; /* 2 */
+}
+
+small {
+font-size: 80%;
+}
+
+sub,
+sup {
+font-size: 75%;
+line-height: 0;
+position: relative;
+vertical-align: baseline;
+}
+
+sub {
+bottom: -0.25em;
+}
+
+sup {
+top: -0.5em;
+}
+
+img {
+border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+font-family: inherit; /* 1 */
+font-size: 100%; /* 1 */
+line-height: 1.15; /* 1 */
+margin: 0; /* 2 */
+}
+
+button,
+input { /* 1 */
+overflow: visible;
+}
+
+button,
+select { /* 1 */
+text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+-webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+border-style: none;
+padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+outline: 1px dotted ButtonText;
+}
+
+fieldset {
+padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+box-sizing: border-box; /* 1 */
+color: inherit; /* 2 */
+display: table; /* 1 */
+max-width: 100%; /* 1 */
+padding: 0; /* 3 */
+white-space: normal; /* 1 */
+}
+
+progress {
+vertical-align: baseline;
+}
+
+textarea {
+overflow: auto;
+}  
+
+[type="checkbox"],
+[type="radio"] {
+box-sizing: border-box; /* 1 */
+padding: 0; /* 2 */
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+height: auto;
+}
+
+[type="search"] {
+-webkit-appearance: textfield; /* 1 */
+outline-offset: -2px; /* 2 */
+}
+
+[type="search"]::-webkit-search-decoration {
+-webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+-webkit-appearance: button; /* 1 */
+font: inherit; /* 2 */
+}
+
+details {
+display: block;
+}
+
+summary {
+display: list-item;
+}
+
+template {
+display: none;
+}
+
+[hidden] {
+display: none;
+}
+
+/* reset */
+a {
+	text-decoration: none;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, a, em, img, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, article, footer, header, nav, section, main {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline; 
+}
+
+h1, h2, h3, h4, h5, h6, p, a, ul {
+	font-size: 1em;
+	font-weight: normal;
+}
+/* fim reset */
+
+/* grid */
+*, *:before, *:after {
+    -webkit-box-sizing: border-box; 
+    -moz-box-sizing: border-box; 
+    box-sizing: border-box;
+  }
+  
+  /* considerando um desktop de 1400px = 960px conteúdo + 220px de margem */
+  .container {
+      width: 960px;
+      margin: 0 auto; /*essa margem alinha ao centro*/
+      padding: 0px;
+      position: relative;
+  }
+  
+  /* serve de clear quando criar um container novo */
+  .container:after, .container:before {
+      content: " ";
+      display: table;
+  }
+  
+  .container:after {
+      clear: both;
+  }
+  
+  /* de acordo com a largura das colunas no figma */
+  .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, 
+  .grid-8, .grid-9, .grid-10, .grid-11, .grid-12, .grid-13, .grid-14, 
+  .grid-15, .grid-16, .grid-1-3 {
+      float: left;
+      margin-left: 10px;
+      margin-right: 10px;
+  }
+  
+  /* tamanho do grid */
+  /* definir de acordo com o wireframe */
+  .grid-1 	{width: 40px;}
+  .grid-2 	{width: 100px;}
+  .grid-3 	{width: 160px;}
+  .grid-4 	{width: 220px;}
+  .grid-5 	{width: 280px;}
+  .grid-6 	{width: 340px;}
+  .grid-7 	{width: 400px;}
+  .grid-8 	{width: 460px;}
+  .grid-9 	{width: 520px;}
+  .grid-10 	{width: 580px;}
+  .grid-11 	{width: 640px;}
+  .grid-12 	{width: 700px;}
+  .grid-13 	{width: 760px;}
+  .grid-14 	{width: 820px;}
+  .grid-15 	{width: 880px;}
+  .grid-16 	{width: 940px;}
+  .grid-1-3	{width: 300px;} /* grid 1/3 = 3 colunas iguais */
+  
+  /* css específico para tablet (768px + 20px do scroll) >>> grid responsivo */
+  /* para fazer isso utiliza-se media query */
+  /* o que está aqui só será aplicado em um dispositivo que tenha o minimo de 768px e o maximo de 959px de largura */
+  @media only screen and (min-width: 788px) and (max-width: 979px) {
+      .container {
+          width: 768px;		
+      }
+  
+      .grid-1 	{width: 28px;}
+      .grid-2 	{width: 76px;}
+      .grid-3 	{width: 124px;}
+      .grid-4 	{width: 172px;}
+      .grid-5 	{width: 220px;}
+      .grid-6 	{width: 268px;}
+      .grid-7 	{width: 316px;}
+      .grid-8 	{width: 364px;}
+      .grid-9 	{width: 412px;}
+      .grid-10 	{width: 460px;}
+      .grid-11 	{width: 508px;}
+      .grid-12 	{width: 556px;}
+      .grid-13 	{width: 604px;}
+      .grid-14 	{width: 652px;}
+      .grid-15 	{width: 700px;}
+      .grid-16 	{width: 748px;}
+      .grid-1-3	{width: 236px;}
+  }
+  
+  /* telas menores q 768px*/
+  @media only screen and (max-width: 787px) {
+      .container {
+          width: 300px;		
+      }
+  
+      .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, 
+      .grid-8, .grid-9, .grid-10, .grid-11, .grid-12, .grid-13, .grid-14, 
+      .grid-15, .grid-16, .grid-1-3 {
+          width: 300px;
+          margin: 0 0 20px 0;
+          float: none;
+      }
+}
+/* fim grid */
+
+/* style geral */
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -111,7 +412,7 @@ img {
 .introducao {
     width: 100%;
     height: 380px;
-    background: url("../images/bgbkcft-bg.jpg") no-repeat center;
+    background: url("./images/bgbkcft-bg.jpg") no-repeat center;
     margin-top: 92px;
     color: white;
     text-align: center;
@@ -271,7 +572,7 @@ img {
     width: 604px;
     height: 80px;
     display: block;
-    background: url("../images/logo/linhas-qualidade.svg");
+    background: url("./images/logo/linhas-qualidade.svg");
     position: absolute;
     top: 221px;
     right: 178px;
@@ -313,7 +614,7 @@ img {
 .quebra {
     width: 100%;
     height: 220px;
-    background: url("../images/bg-footer.jpg") no-repeat center;
+    background: url("./images/bg-footer.jpg") no-repeat center;
     background-size: cover;
     text-align: center;
     padding-top: 40px;
@@ -467,3 +768,492 @@ img {
 #form-erro {
     color: #f64540;
 }
+/* fim style geral */
+
+/* style sobre */
+.interna-sobre {
+    background: url("./images/bg-sobre.jpg") center no-repeat;
+    background-size: cover;
+}
+
+.missao-sobre {
+    padding-top: 60px;
+}
+
+.missao-sobre img {
+    padding-top: 20px;
+}
+
+.missao-sobre ul {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    line-height: 30px;
+}
+
+.missao-sobre p {
+    font-size: 18px;
+    line-height: 25px;
+    margin-bottom: 1em;
+    padding-right: 60px;
+}
+/* fim style sobre */
+
+/* style produtos */
+.interna-produtos {
+    background: url("./images/bg-produtos.jpg") no-repeat center;
+    background-size: cover; /* sempre abaixo do bg */
+}
+
+.produto-item {
+    padding-top: 60px;
+}
+
+.produto-item h2 {
+    font-size: 36px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .1em;
+    color: #fff;
+    /* para posicionr em cima da foto = POSITION RELATIVE/ABSOLUTE (mais incisivo) */
+    position: relative;
+    top: -180px;
+    /* por estar na posição relativa, o  espaço ainda fica "ocupado" mas invisível,
+    para retirar, coloca-se margin anulandao o espaço ocupado e acresceentando o gutter padronizado */
+    margin-bottom: -67px;
+}
+
+.produto-item h2:before, .produto-item h2:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #fff;
+    margin: 10px auto;
+}
+
+.icone-produto {
+    background: #000;
+    padding: 70px 0;
+}
+
+.icone-produto img {
+    margin: 0 auto;
+}
+
+.produto-info {
+    background: #000;
+}
+
+.produto-info p {
+    height: 180px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #fff;
+    padding: 30px 40px;
+}
+
+.produto-info ul li {
+    background: #FEC63E;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 20px;
+    float: left;
+    width: 229px;
+    height: 49px;
+    padding-top: 16px;
+}
+
+/* para falar somente com o primeiro elemento p/ distanciar o "conforto"+"velocidade"
+de "design" + "versatilidade"  */
+.produto-info ul li:nth-child(1) {
+    margin-bottom: 2px;
+}
+/* para poder falar com "velocidade" e "versatilidade" 
+ODD FALA COM TODOS N°S ÍMPARES - EVEN FLA COM TODOS OS PARES */
+.produto-info ul li:nth-child(odd) {
+    margin-right: 2px;
+}
+
+.orcamento {
+    background: #000;
+    width: 100%;
+    /* height: 600px; */
+    margin-top: 60px;
+    padding: 40px 0;
+}
+
+.orcamento h2 {
+    color: #FEC63E;
+}
+
+.orcamento h2:after {
+    background: #FEC63E;
+}
+
+.form {
+    padding-right: 60px;
+}
+
+.form label {
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 25px;
+    margin-bottom: 4px;
+}
+
+.form input {
+    display: block;
+    width: 100%; /* para pegar o grid-8 completo */
+    padding: 7px 10px;
+    margin-bottom: 10px;
+    border: 4px solid #FEC63E;
+    background: none;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff; /* cor da fonte quando a pessoa reencher o input */
+    outline: none; /* estilo padrão do input quando está selecionado */
+}
+
+.form textarea {
+    display: block;
+    width: 100%;
+    height: 120px;
+    padding: 7px 10px;
+    margin-bottom: 20px;
+    border: 4px solid #FEC63E;
+    background: none;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff; 
+    outline: none;
+    resize: none;
+}
+
+.btn {
+    background: none;
+    padding: 7px 40px;
+}
+
+.dados-orcamento {
+    color: #fff;
+}
+
+.dados-orcamento h3 {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #FEC63E;
+}
+
+.dados-orcamento span {
+    display: block;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 30px;
+}
+
+.dados-orcamento .email-orcamento {
+    margin-bottom: 40px;
+}
+
+.dados-orcamento ul {
+    padding-right: 60px;
+}
+
+.dados-orcamento ul li {
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;    
+    padding: 10px 15px;
+}
+
+.dados-orcamento ul li:nth-child(odd) {
+    background: #1d1d1d;
+}
+
+.dados-orcamento p {
+    margin: 8px 0;
+}
+/* fim style produtos */
+
+/* style portfolio */
+.interna-portfolio {
+    background: url("./images/bg-portfolio.jpg") center no-repeat;
+    background-size: cover;
+}
+
+.quote-clientes {
+    padding: 60px 0;
+    max-width: 460px;
+    margin: 0 auto;
+}
+
+.quote-clientes p {
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    line-height: 25px;
+    font-style: italic;
+    padding-bottom: 15px;
+}
+
+.quote-clientes cite {
+    font-size: 18px;
+    font-weight: bold;
+    font-style: normal;
+    float: right;
+}
+/* fim style portfolio */
+
+/* style contato */
+.interna-contato {
+    background: url("./images/bg-contato.jpg") center no-repeat;
+    background-size: cover;
+}
+
+
+.contato {
+    padding: 40px 0;
+}
+
+#form-contato {
+    padding-right: 60px;
+}
+
+#form-contato label, .form-contato label {
+    display: block;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 25px;
+    margin-bottom: 4px;
+}
+
+.form-contato label {
+    color: #000;
+}
+
+#form-contato input {
+    display: block;
+    width: 100%; /* para pegar o grid-8 completo */
+    padding: 7px 10px;
+    margin-bottom: 10px;
+    border: 4px solid #FEC63E;
+    background: none;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    outline: none; /* estilo padrão do input quando está selecionado */
+}
+
+#form-contato textarea {
+    display: block;
+    width: 100%;
+    height: 120px;
+    padding: 7px 10px;
+    margin-bottom: 20px;
+    border: 4px solid #FEC63E;
+    background: none;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    outline: none;
+}
+
+#form-contato button {
+    background: none;
+    padding: 7px 40px;
+}
+
+.dados-contato h3 {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #FEC63E;
+}
+
+.dados-contato span {
+    display: block;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 30px;
+}
+
+.dados-contato .email-contato {
+    margin-bottom: 30px;
+}
+
+.dados-contato ul li {
+    display: inline-block;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;    
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.dados-contato p {
+    font-size: 18px;
+    line-height: 30px;
+    margin: 30px 0;
+}
+
+.contato-mapa {
+    margin-bottom: 60px;
+}
+/* fim style contato */
+
+/* responsivo */
+/* tablet */
+@media only screen and (min-width: 788px) and (max-width: 979px) {
+
+    /* home */
+    .qualidade:after {
+        right: 82px;
+    } 
+
+    .qualidade-lista li {
+        padding: 0 10px;
+    }
+
+    .footer-redes ul li img {
+        width: 42px;
+        height: 42px;
+    }
+
+    /* produtos */
+    .produto-item h2 {
+        top: -150px;
+        margin-bottom: -20px;
+    }
+
+    .icone-produto {
+        padding: 41px 0;
+    }
+
+    .produto-info p {
+        height: 122px;
+        font-size: 14px;
+        line-height: 20px;
+        padding: 20px 30px;
+    }
+
+    .produto-info ul li {
+        width: 181px; /* novo grid-8 = 364px, então 364%2 = 182 // 181 por conta do 1px usado nas linhas */
+        height: 49px;
+    }
+
+    /* contato */
+ 
+}
+
+/* smartphone */
+@media only screen and (max-width: 787px) {
+    /* home */
+    .header {
+        position: relative;
+        padding-bottom: 0;
+    }
+
+    .header img {
+        margin: 0 auto 10px auto;
+    }
+
+    .header-menu {
+        text-align: center;
+    }
+
+    .header-menu ul li {
+        margin: 5px;
+    }
+
+    .header-menu ul li a {
+        border: 4px solid #000;
+        width: 136px;
+        display: block;
+        float: left;
+        padding: 10px 0;
+    }
+
+    .header-menu ul li a:hover {
+        border-color: #fff;
+    }
+
+    .header-menu .menu-ativo {
+        border-color: #fff;
+    }
+
+    .introducao {
+        margin-top: 0;
+        padding-top: 47px;
+        background: url("../images/bgbkcft-bg-mobile.jpg") center no-repeat;
+        background-size: cover;
+    }
+
+    /* sobre */
+    .introducao-interna {
+        margin-top: 0;
+    }
+
+    .container h1 {
+        font-size: 36px;
+    }
+
+    .call-to-action {
+        padding-top: 10px;
+    }
+    
+    .qualidade:after {
+        display: none;
+    } 
+
+    .missao-sobre p {
+        font-size: 14px;
+        line-height: 20px;
+        padding-right: 0;
+    }
+
+    .missao-sobre ul li {
+        font-size: 14px;
+        line-height: 25px;
+    }
+
+    /* produtos */
+    .produto-item h2 {
+        top: -100px;
+        margin-bottom: -68px;
+    }
+    
+    .icone-produto {
+        padding: 40px 0;
+        margin-bottom: 100px;
+    }
+
+    .produto-info p {
+        height: auto;
+        font-size: 14px;
+        line-height: 20px;
+        padding: 20px 30px;
+    }
+
+    .produto-info ul li {
+        width: 149px; /* novo grid-8 = 364px, então 364%2 = 182 // 181 por conta do 1px usado nas linhas */
+        height: 49px;
+        font-size: 14px;
+        line-height: 20px;
+        padding-top: 14px;
+    }
+
+    .form     
+    .dados-orcamento ul {
+        padding-right: 0;
+    }        
+
+    /* contato */
+    #form-contato {
+        padding-right: 0;
+        margin-bottom: 40px;
+    }
+}
+/* fim style responsivo */
